syntax = "proto3";

package acton.dx.cache.v1;

// Cache service for Redis operations
service CacheService {
  // Key-value operations
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc Exists(ExistsRequest) returns (ExistsResponse);

  // Rate limiting
  rpc CheckRateLimit(RateLimitRequest) returns (RateLimitResponse);
  rpc IncrementCounter(IncrementRequest) returns (IncrementResponse);

  // Hash operations
  rpc HGet(HGetRequest) returns (HGetResponse);
  rpc HSet(HSetRequest) returns (HSetResponse);
  rpc HGetAll(HGetAllRequest) returns (HGetAllResponse);

  // List operations
  rpc LPush(LPushRequest) returns (LPushResponse);
  rpc RPop(RPopRequest) returns (RPopResponse);
  rpc LRange(LRangeRequest) returns (LRangeResponse);
}

// Key-value messages
message GetRequest {
  string key = 1;
}

message GetResponse {
  optional bytes value = 1;
  bool found = 2;
}

message SetRequest {
  string key = 1;
  bytes value = 2;
  optional int64 ttl_seconds = 3;
}

message SetResponse {
  bool success = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool deleted = 1;
}

message ExistsRequest {
  string key = 1;
}

message ExistsResponse {
  bool exists = 1;
}

// Rate limiting messages
message RateLimitRequest {
  string key = 1;
  int32 limit = 2;
  int32 window_seconds = 3;
}

message RateLimitResponse {
  bool allowed = 1;
  int32 remaining = 2;
  int32 reset_in_seconds = 3;
}

message IncrementRequest {
  string key = 1;
  int64 amount = 2;
  optional int64 ttl_seconds = 3;
}

message IncrementResponse {
  int64 new_value = 1;
}

// Hash messages
message HGetRequest {
  string key = 1;
  string field = 2;
}

message HGetResponse {
  optional bytes value = 1;
  bool found = 2;
}

message HSetRequest {
  string key = 1;
  string field = 2;
  bytes value = 3;
}

message HSetResponse {
  bool success = 1;
}

message HGetAllRequest {
  string key = 1;
}

message HGetAllResponse {
  map<string, bytes> fields = 1;
}

// List messages
message LPushRequest {
  string key = 1;
  bytes value = 2;
}

message LPushResponse {
  int64 length = 1;
}

message RPopRequest {
  string key = 1;
}

message RPopResponse {
  optional bytes value = 1;
}

message LRangeRequest {
  string key = 1;
  int64 start = 2;
  int64 stop = 3;
}

message LRangeResponse {
  repeated bytes values = 1;
}
